--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,10 @@
     <string name="judul_B">Mengatasi Kekurangan Nilai</string>
     <string name="judul_A">Menjaga Nilai Tetap Bagus</string>
     <string name="judul_C">Mengatasi Kekurangan Nilai</string>
+    <string name="koneksi_error">Koneksi Error</string>
+    <string name="channel_name">Updater</string>
+    <string name="channel_desc">Update data mahasiswa otomatis</string>
+    <string name="notif_title">Ayo Hitung Nilai Mahasiswa!</string>
+    <string name="notif_text">Cek sekarang Agar Nilai nya Cepat Terhitung.......</string>
 
 </resources>
